@@ -7,6 +7,7 @@ our $VERSION = '1.71';
 use Datahub::Factory::Env;
 use Datahub::Factory::Config;
 use Datahub::Factory::Pipeline;
+use File::Spec;
 use Sub::Exporter::Util qw(curry_method);
 use Sub::Exporter -setup => {
     exports => [
@@ -49,17 +50,36 @@ sub _env {
     state $loaded_env;
     $loaded_env = $env if defined $env;
     $loaded_env
-        ||= Datahub::Factory::Env->new();
+        ||= Datahub::Factory::Env->new(load_paths => $class->default_load_path);
+}
+
+sub default_load_path {    # TODO move to Catmandu::Env
+    my ($class, $path) = @_;
+    state $default_path;
+    $default_path = $path if defined $path;
+    $default_path //= do {
+        my $script = File::Spec->rel2abs($0);
+        my ($script_vol, $script_path, $script_name)
+            = File::Spec->splitpath($script);
+        my @dirs = grep length, File::Spec->splitdir($script_path);
+        if ($dirs[-1] eq 'bin') {
+            pop @dirs;
+            File::Spec->catdir(File::Spec->rootdir, @dirs);
+        }
+        else {
+            $script_path;
+        }
+    };
 }
 
 sub config {
     my ($class, $config) = @_;
 
-    # if ($config) {
-    #     my $env = Datahub::Factory::Env->new(load_paths => $class->_env->load_paths);
-    #     $env->_set_config($config);
-    #     $class->_env($env);
-    # }
+    if ($config) {
+        my $env = Datahub::Factory::Env->new(load_paths => $class->_env->load_paths);
+        $env->_set_config($config);
+        $class->_env($env);
+    }
 
     $class->_env->config;
 }
