@@ -38,22 +38,16 @@ log4perl.category.datahub=$level,$appender
 log4perl.appender.STDOUT=Log::Log4perl::Appender::Screen
 log4perl.appender.STDOUT.stderr=0
 log4perl.appender.STDOUT.utf8=1
+
 log4perl.appender.STDOUT.layout=PatternLayout
-log4perl.appender.STDOUT.layout.ConversionPattern=%d [%P] - %p : %m%n
+log4perl.appender.STDOUT.layout.ConversionPattern=%d [%P] - %p %l %M time=%r : %m%n
 
 log4perl.appender.STDERR=Log::Log4perl::Appender::Screen
 log4perl.appender.STDERR.stderr=1
 log4perl.appender.STDERR.utf8=1
-log4perl.appender.STDERR.layout=PatternLayout
-log4perl.appender.STDERR.layout.ConversionPattern=%d [%P] - %p %l time=%r : %m%n
 
-log4perl.appender.STATISTICS=Log::Log4perl::Appender::File
-log4perl.appender.STATISTICS.filename=logs/import_$date.log
-log4perl.appender.STATISTICS.utf8=1
-log4perl.appender.STATISTICS.mkpath=1
-log4perl.appender.STATISTICS.header_text=$import_log_header
-log4perl.appender.STATISTICS.layout=PatternLayout
-log4perl.appender.STATISTICS.layout.ConversionPattern=%d [%P] - %p : %m%n
+log4perl.appender.STDERR.layout=PatternLayout
+log4perl.appender.STDERR.layout.ConversionPattern=%d [%P] - %l : %m%n
 
 EOF
     return \$config;
@@ -69,26 +63,23 @@ sub setup_logging {
         my $log4perl_pkg = Datahub::Factory::Util::require_package('Log::Log4perl');
         my $logany_adapter = Datahub::Factory::Util::require_package('Log::Any::Adapter::Log4perl');
 
-        # my $config = Datahub::Factory->config->{log4perl};
+        my $config = Datahub::Factory->config->{log4perl};
 
-        # if (defined ($config)) {
-        #     if ($config =~ /^$+$/) {
-        #         Log::Log4perl::init($config);
-        #         $load_from = "file: $config";
-        #     }
-        #     else {
-        #         Log::Log4perl::init(\$config);
-        #         $load_from = "string: <defined in datahubfactory.yml>";
-        #     }
-        # }
-        # else {
-        #     Log::Log4perl::init(default_log4perl_config($level, 'STDERR'));
-        #     $load_from = "string: <defined in : " . __PACKAGE__ . ">";
-        # }
-
-        Log::Log4perl::init(default_log4perl_config($level, 'STDERR'));
-        $load_from = "string: <defined in : " . __PACKAGE__ . ">";
-
+        if (defined ($config)) {
+            if ($config =~ /^\S+$/) {
+                Log::Log4perl::init($config);
+                $load_from = "file: $config";
+            }
+            else {
+                Log::Log4perl::init(\$config);
+                $load_from = "string: <defined in datahubfactory.yml>";
+            }
+        }
+        else {
+            Log::Log4perl::init(default_log4perl_config($level, 'STDERR'));
+            $load_from = "string: <defined in : " . __PACKAGE__ . ">";
+        }
+ 
         Log::Any::Adapter->set('Log4perl');
 
     } catch {
